@@ -136,7 +136,7 @@ public class EstimateConsumer extends HttpServlet
 	    numThreads = ingestService.getQueueServiceConf().getString("NumThreads");
 	    if (StringUtil.isNotEmpty(numThreads)) {
 	    	System.out.println("[info] " + MESSAGE + "Setting thread pool size: " + numThreads);
-		this.numThreads = new Integer(numThreads).intValue();
+		this.numThreads = Integer.valueOf(numThreads);
 	    }
 	} catch (Exception e) {
 	    System.err.println("[warn] " + MESSAGE + "Could not set thread pool size: " + numThreads + "  - using default: " + this.numThreads);
@@ -146,7 +146,7 @@ public class EstimateConsumer extends HttpServlet
 	    pollingInterval = ingestService.getQueueServiceConf().getString("PollingInterval");
 	    if (StringUtil.isNotEmpty(pollingInterval)) {
 	    	System.out.println("[info] " + MESSAGE + "Setting polling interval: " + pollingInterval);
-		this.pollingInterval = new Integer(pollingInterval).intValue();
+		this.pollingInterval = Integer.valueOf(pollingInterval);
 	    }
 	} catch (Exception e) {
 	    System.err.println("[warn] " + MESSAGE + "Could not set polling interval: " + pollingInterval + "  - using default: " + this.pollingInterval);
@@ -331,14 +331,19 @@ class EstimateConsumerDaemon implements Runnable
                             } catch (Exception e) {
                                 System.err.println(MESSAGE + "[WARN] error acquiring job: " + e.getMessage());
                                 try {
-        	    		   Thread.currentThread().sleep(ZookeeperUtil.SLEEP_ZK_RETRY); 
-               			   zooKeeper = new ZooKeeper(queueConnectionString, ZookeeperUtil.ZK_SESSION_TIMEOUT, new Ignorer());
-                                } catch (Exception e4) {
-                                } finally {
-                                   if (job != null) job.unlock(zooKeeper);
-                                   break;
+                                   // Reestablish connection
+                                   Thread.currentThread().sleep(ZookeeperUtil.SLEEP_ZK_RETRY);
+                                   zooKeeper = new ZooKeeper(queueConnectionString, ZookeeperUtil.ZK_SESSION_TIMEOUT, new Ignorer());
+                                } catch (Exception e4) {}
+                                if (e instanceof InterruptedException) {
+                                   System.err.println(MESSAGE + "[INFO] removing lock for Job: " + e.getMessage());
+                                   // ZK was unable to unlock job.  Must do it manually
+                                   unlockJob(e.getMessage());
                                 }
-
+                                job = null;
+                            } finally {
+                                // if (job != null) job.unlock(zooKeeper);
+                                // break;
                             }
 
                             if ( job != null) {
@@ -430,8 +435,22 @@ class EstimateConsumerDaemon implements Runnable
         } finally {
 		try {
 		   zooKeeper.close();
+		   zooKeeper = null;
 		} catch (Exception ze) {}
 	}
+    }
+
+    private void unlockJob(String errorMsg) {
+       String jobID = errorMsg.split(":")[1];
+       String lock = "/jobs/" + jobID.replaceAll("\\s","") + "/lock";
+
+       try {
+          if (zooKeeper.exists(lock, false) != null) {
+             zooKeeper.delete(lock, -1);
+          }
+       } catch (Exception e) {
+          System.err.println("Unable to remove lock from errored Job: " + lock);
+       }
     }
 
     private boolean onHold()
@@ -556,7 +575,7 @@ class EstimateConsumeData implements Runnable
 
 	    ingestRequest.getJob().setJobStatus(JobStatusEnum.CONSUMED);
 	    ingestRequest.getJob().setQueuePriority(String.format("%02d", priority));
-	    Boolean update = new Boolean(jp.getBoolean("update"));
+	    Boolean update = Boolean.valueOf(jp.getBoolean("update"));
 	    ingestRequest.getJob().setUpdateFlag(update.booleanValue());
             ingestRequest.getJob().setSubmissionSize(spaceNeeded);
 	    ingestRequest.setQueuePath(new File(ingestService.getIngestServiceProp() + FS +
@@ -676,6 +695,7 @@ class EstimateConsumeData implements Runnable
 	   } catch(Exception ze) {}
 	   try {
 	       zooKeeper.close();
+	       zooKeeper = null;
 	   } catch(Exception ze) {}
 	} 
     }
