@@ -134,7 +134,7 @@ public class NotifyConsumer extends HttpServlet
 	    numThreads = ingestService.getQueueServiceConf().getString("NumThreads");
 	    if (StringUtil.isNotEmpty(numThreads)) {
 	    	System.out.println("[info] " + MESSAGE + "Setting thread pool size: " + numThreads);
-		this.numThreads = new Integer(numThreads).intValue();
+		this.numThreads = Integer.valueOf(numThreads);
 	    }
 	} catch (Exception e) {
 	    System.err.println("[warn] " + MESSAGE + "Could not set thread pool size: " + numThreads + "  - using default: " + this.numThreads);
@@ -144,7 +144,7 @@ public class NotifyConsumer extends HttpServlet
 	    pollingInterval = ingestService.getQueueServiceConf().getString("PollingInterval");
 	    if (StringUtil.isNotEmpty(pollingInterval)) {
 	    	System.out.println("[info] " + MESSAGE + "Setting polling interval: " + pollingInterval);
-		this.pollingInterval = new Integer(pollingInterval).intValue();
+		this.pollingInterval = Integer.valueOf(pollingInterval);
 	    }
 	} catch (Exception e) {
 	    System.err.println("[warn] " + MESSAGE + "Could not set polling interval: " + pollingInterval + "  - using default: " + this.pollingInterval);
@@ -320,13 +320,19 @@ class NotifyConsumerDaemon implements Runnable
                             } catch (Exception e) {
                                 System.err.println(MESSAGE + "[WARN] error acquiring job: " + e.getMessage());
                                 try {
-        	    		   Thread.currentThread().sleep(ZookeeperUtil.SLEEP_ZK_RETRY); 
-               			   zooKeeper = new ZooKeeper(queueConnectionString, ZookeeperUtil.ZK_SESSION_TIMEOUT, new Ignorer());
-                                } catch (Exception e4) {
-                                } finally {
-                                   if (job != null) job.unlock(zooKeeper);
-                                   break;
+                                   // Reestablish connection
+                                   Thread.currentThread().sleep(ZookeeperUtil.SLEEP_ZK_RETRY);
+                                   zooKeeper = new ZooKeeper(queueConnectionString, ZookeeperUtil.ZK_SESSION_TIMEOUT, new Ignorer());
+                                } catch (Exception e4) {}
+                                if (e instanceof InterruptedException) {
+                                   System.err.println(MESSAGE + "[INFO] removing lock for Job: " + e.getMessage());
+                                   // ZK was unable to unlock job.  Must do it manually
+                                   unlockJob(e.getMessage());
                                 }
+                                job = null;
+                            } finally {
+                                // if (job != null) job.unlock(zooKeeper);
+                                // break;
                             }
 
                             if ( job != null) {
@@ -391,8 +397,22 @@ class NotifyConsumerDaemon implements Runnable
 
 	   try {
 	     zooKeeper.close();
+	     zooKeeper = null;
 	   } catch (Exception ze) {}
 	}
+    }
+
+    private void unlockJob(String errorMsg) {
+       String jobID = errorMsg.split(":")[1];
+       String lock = "/jobs/" + jobID.replaceAll("\\s","") + "/lock";
+
+       try {
+          if (zooKeeper.exists(lock, false) != null) {
+             zooKeeper.delete(lock, -1);
+          }
+       } catch (Exception e) {
+          System.err.println("Unable to remove lock from errored Job: " + lock);
+       }
     }
 
     // to do: make this a service call
@@ -495,7 +515,7 @@ class NotifyConsumeData implements Runnable
 	    else
 	        ingestRequest.getJob().setJobStatus(JobStatusEnum.COMPLETED);
             ingestRequest.getJob().setQueuePriority(String.format("%02d", priority));
-	    Boolean update = new Boolean(jp.getBoolean("update"));
+	    Boolean update = Boolean.valueOf(jp.getBoolean("update"));
 	    ingestRequest.getJob().setUpdateFlag(update.booleanValue());
             ingestRequest.getJob().setSubmissionSize(spaceNeeded);
 	    ingestRequest.setQueuePath(new File(ingestService.getIngestServiceProp() + FS +
@@ -589,6 +609,7 @@ class NotifyConsumeData implements Runnable
            } catch(Exception ze) {}
            try {
              zooKeeper.close();
+             zooKeeper = null;
            } catch(Exception ze) {}
         }
 
